kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chicken-maze
  labels:
    app: chicken-maze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chicken-maze
  template:
    metadata:
      labels:
        app: chicken-maze
    spec:
      volumes: []
      containers:
      - name: main
        image: chicken-maze.run:latest
        #image: polly-registry:23443/polly-registry/chicken-maze.run:master-26106f28663a2123fc0e26850c2dfa805e4786d4
        imagePullPolicy: Always
        command: ["/var/lib/wkndr/release/wkndr.mruby.x11", "--server=/var/lib/wkndr/public", "--no-client"]
          #--server=/home/jon/workspace/chicken-maze.run/public --no-client
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 1024M
            cpu: 1000m
          requests:
            memory: 100M
            cpu: 10m
        volumeMounts: []
      - name: mkmaze
        image: chicken-maze.run:latest
        #image: polly-registry:23443/polly-registry/chicken-maze.run:master-26106f28663a2123fc0e26850c2dfa805e4786d4
        imagePullPolicy: Always
        command: ["/var/lib/wkndr/release/wkndr.mruby.x11", "--no-server", "--party=/var/lib/wkndr/Wkndrfile.mkmaze"]
        resources:
          limits:
            memory: 1024M
            cpu: 1000m
          requests:
            memory: 100M
            cpu: 10m
        volumeMounts: []
      #- name: mkmaze
      #  image: chicken-maze.run:latest
      #  imagePullPolicy: IfNotPresent
      #  command: ["/var/lib/wkndr/release/wkndr.mruby", "--no-server", "--party=/var/lib/wkndr/Wkndrfile.mkmaze"]
      #  resources:
      #    limits:
      #      memory: 1024M
      #      cpu: 50m
      #    requests:
      #      memory: 100M
      #      cpu: 10m
      #  volumeMounts: []


---
apiVersion: v1
kind: Service
metadata:
  name: chicken-maze-service
spec:
  selector:
    app: chicken-maze
  ports:
  - protocol: TCP
    name: app
    port: 8000
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chicken-maze-vhost
spec:
  rules:
  - host: chicken-maze.run
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: chicken-maze-service
              port:
                number: 8000
...
